8242054: Shenandoah: New incremental-update mode
Reviewed-by: shade